fdo#55693 Two initial capitalized letters corrected in compound words

What changes I made:

1. In svxacorr.cxx SvxAutoCorrect::IsAutoCorrectChar, I added '-' as a character.
2. In svxacorr.cxx SvxAutoCorrect::FnCptlSttWrd, I added code to iterate through each AutoCorrectChar in a compound word to determine if capitalization needs fixing.

Change-Id: I4e7de33fceccdea5edd84e83bacc7ae690135d76
Reviewed-on: https://gerrit.libreoffice.org/2351
Tested-by: LibreOffice gerrit bot <gerrit@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>